# UNOS

./: .clang-format  .gitmodules  CMakeLists.txt  build_test.sh
core/unos/: unos.hh
core/unos/cost_function/: analytic_cost_function.hh  cost_function.hh  sized_cost_function.hh
core/unos/evaluator/: evaluator.cc  evaluator.hh
core/unos/factory/: factory.hh
core/unos/jacobian_writer/: dense_jacobian_writer.cc  dense_jacobian_writer.hh  jacobian_writer.cc  jacobian_writer.hh
core/unos/loss_function/: huber_loss_function.hh  loss_function.hh
core/unos/manifold/: manifold.hh  manifold_base.cc  manifold_base.hh  so3.hh  sub_manifold.cc  sub_manifold.hh  vec.hh
core/unos/minimizer/: minimizer.cc  minimizer.hh  trust_region_minimizer.cc  trust_region_minimizer.hh
core/unos/optimize_strategy/: gaussian_newton_optimizer.hh  levenberg_marquardt_strategy.cc  levenberg_marquardt_strategy.hh  trust_region_strategy.cc  trust_region_strategy.hh
core/unos/optimizer/: optimizer.hh  trust_region_optimizer.hh
core/unos/problem/: parameter_block.cc  parameter_block.hh  problem.cc  problem.hh  program.cc  program.hh  residual_block.cc  residual_block.hh
core/unos/solver/: solver.cc  solver.hh
core/unos/sparse_matrix/: dense_sparse_matrix.cc  dense_sparse_matrix.hh  sparse_matrix.hh
core/unos/types/: types.h
core/unos/utils/: cast_utils.hh  log_utils.cc  log_utils.hh
include/unos/: unos.hh
include/unos/cost_function/: analytic_cost_function.hh  cost_function.hh  sized_cost_function.hh
include/unos/evaluator/: evaluator.cc  evaluator.hh
include/unos/loss_function/: loss_function.hh
include/unos/manifold/: manifold.hh  so3.hh  sub_manifold.hh
include/unos/optimize_strategy/: gaussian_newton_optimizer.hh  levenberg_marquardt.hh
include/unos/optimizer/: gaussian_newton.hh  levenberg_marquardt.hh  optimizer.hh
include/unos/problem/: parameter_block.hh  problem.cc  problem.hh  residual_block.hh
include/unos/utils/: log_utils.hh
manifold/: manifold.hh
src/manifold/: sub_manifold.cc
tests/: curve_fit.cc  manifold_test.cc  pose_graph_3d.cc  pose_graph_3d_error_term.cc  problem_test.cc  quaternion_jacobian_test.cc  test.cc
tests/slam/: pose_graph_3d_error_term.hh  read_g2o.hh  types.hh
